# char-graph

./: .gitignore  main.py  pyproject.toml  test.txt
baml_client/: async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
baml_src/: clients.baml  ner.baml
docs/: pride_and_predujice.txt  sample.txt
