[project]
name = "baml-ner-span"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "baml-cli>=0.1.0",
    "baml-py>=0.211.2",
    "litellm>=1.79.1",
    "pydantic>=2.12.3",
    "pyvis>=0.3.2",
    "typing-extensions>=4.15.0",
]
